@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,8 +22,13 @@ import software.amazon.awscdk.services.events.Schedule;
 import software.amazon.awscdk.services.events.targets.LambdaFunction;
 import software.amazon.awscdk.services.lambda.IFunction;
 import software.amazon.awscdk.services.lambda.Runtime;
+import software.amazon.awscdk.services.lambda.eventsources.SqsEventSource;
+import software.amazon.awscdk.services.lambda.eventsources.SqsEventSourceProps;
 import software.amazon.awscdk.services.s3.Bucket;
 import software.amazon.awscdk.services.s3.IBucket;
+import software.amazon.awscdk.services.sns.Topic;
+import software.amazon.awscdk.services.sqs.DeadLetterQueue;
+import software.amazon.awscdk.services.sqs.Queue;
 import software.constructs.Construct;
 
 import sleeper.cdk.Utils;
@@ -33,29 +38,34 @@ import sleeper.cdk.jars.LambdaCode;
 import sleeper.configuration.properties.SleeperScheduleRule;
 import sleeper.configuration.properties.instance.InstanceProperties;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
 
+import static sleeper.cdk.Utils.createAlarmForDlq;
+import static sleeper.cdk.Utils.createLambdaLogGroup;
 import static sleeper.cdk.Utils.shouldDeployPaused;
 import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_CLOUDWATCH_RULE;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_DLQ_ARN;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_DLQ_URL;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_LAMBDA_FUNCTION;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_QUEUE_ARN;
+import static sleeper.configuration.properties.instance.CdkDefinedInstanceProperty.GARBAGE_COLLECTOR_QUEUE_URL;
 import static sleeper.configuration.properties.instance.CommonProperty.ID;
 import static sleeper.configuration.properties.instance.CommonProperty.JARS_BUCKET;
-import static sleeper.configuration.properties.instance.CommonProperty.LOG_RETENTION_IN_DAYS;
+import static sleeper.configuration.properties.instance.CommonProperty.TABLE_BATCHING_LAMBDAS_MEMORY_IN_MB;
+import static sleeper.configuration.properties.instance.CommonProperty.TABLE_BATCHING_LAMBDAS_TIMEOUT_IN_SECONDS;
 import static sleeper.configuration.properties.instance.GarbageCollectionProperty.GARBAGE_COLLECTOR_LAMBDA_MEMORY_IN_MB;
 import static sleeper.configuration.properties.instance.GarbageCollectionProperty.GARBAGE_COLLECTOR_PERIOD_IN_MINUTES;
 
 /**
- * A {@link NestedStack} to garbage collect files which have been marked as being ready
- * for garbage collection after a compaction job.
+ * Deploys resources to perform garbage collection. This will find and delete files which have been marked as being
+ * ready for garbage collection after a compaction job.
  */
 public class GarbageCollectorStack extends NestedStack {
 
     public GarbageCollectorStack(
-            Construct scope,
-            String id,
-            InstanceProperties instanceProperties,
-            BuiltJars jars,
-            CoreStacks coreStacks) {
+            Construct scope, String id, InstanceProperties instanceProperties,
+            BuiltJars jars, Topic topic, CoreStacks coreStacks) {
         super(scope, id);
 
         // Jars bucket
@@ -64,27 +74,43 @@ public class GarbageCollectorStack extends NestedStack {
         // Garbage collector code
         LambdaCode gcJar = jars.lambdaCode(BuiltJar.GARBAGE_COLLECTOR, jarsBucket);
 
+        String triggerFunctionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
+                instanceProperties.get(ID).toLowerCase(Locale.ROOT), "garbage-collector-trigger"));
         String functionName = Utils.truncateTo64Characters(String.join("-", "sleeper",
                 instanceProperties.get(ID).toLowerCase(Locale.ROOT), "garbage-collector"));
 
+        // Timeout is set to 90% of the period with which this runs to avoid 2 running simultaneously,
+        // with a maximum of 900 seconds (15 minutes) which is the maximum execution time
+        // of a lambda.
+        int timeoutSecsFromGcPeriod = (int) (0.9 * 60 * instanceProperties.getInt(GARBAGE_COLLECTOR_PERIOD_IN_MINUTES));
+        Duration handlerTimeout = Duration.seconds(Math.max(1, Math.min(timeoutSecsFromGcPeriod, 900)));
+        Duration queueVisibilityTimeout = handlerTimeout.plus(Duration.seconds(10));
+
         // Garbage collector function
-        IFunction handler = gcJar.buildFunction(this, "GarbageCollectorLambda", builder -> builder
+        IFunction triggerFunction = gcJar.buildFunction(this, "GarbageCollectorTrigger", builder -> builder
+                .functionName(triggerFunctionName)
+                .description("Creates batches of Sleeper tables to perform garbage collection for and puts them on a queue to be processed")
+                .runtime(Runtime.JAVA_11)
+                .handler("sleeper.garbagecollector.GarbageCollectorTriggerLambda::handleRequest")
+                .environment(Utils.createDefaultEnvironment(instanceProperties))
+                .memorySize(instanceProperties.getInt(TABLE_BATCHING_LAMBDAS_MEMORY_IN_MB))
+                .timeout(Duration.seconds(instanceProperties.getInt(TABLE_BATCHING_LAMBDAS_TIMEOUT_IN_SECONDS)))
+                .logGroup(createLambdaLogGroup(this, "GarbageCollectorTriggerLogGroup", triggerFunctionName, instanceProperties)));
+        IFunction handlerFunction = gcJar.buildFunction(this, "GarbageCollectorLambda", builder -> builder
                 .functionName(functionName)
-                .description("Scan DynamoDB looking for files that need deleting and delete them")
+                .description("Scan the state store looking for files that need deleting and delete them")
                 .runtime(Runtime.JAVA_11)
                 .memorySize(instanceProperties.getInt(GARBAGE_COLLECTOR_LAMBDA_MEMORY_IN_MB))
-                // Timeout is set to 90% of the period with which this runs to avoid 2 running simultaneously,
-                // with a maximum of 900 seconds (15 minutes) which is the maximum execution time
-                // of a lambda.
-                .timeout(Duration.seconds(Math.max(1, Math.min((int) (0.9 * 60 * instanceProperties.getInt(GARBAGE_COLLECTOR_PERIOD_IN_MINUTES)), 900))))
-                .handler("sleeper.garbagecollector.GarbageCollectorLambda::eventHandler")
+                .timeout(handlerTimeout)
+                .handler("sleeper.garbagecollector.GarbageCollectorLambda::handleRequest")
                 .environment(Utils.createDefaultEnvironment(instanceProperties))
-                .reservedConcurrentExecutions(1)
-                .logRetention(Utils.getRetentionDays(instanceProperties.getInt(LOG_RETENTION_IN_DAYS))));
+                .logGroup(createLambdaLogGroup(this, "GarbageCollectorLambdaLogGroup", functionName, instanceProperties)));
+        instanceProperties.set(GARBAGE_COLLECTOR_LAMBDA_FUNCTION, triggerFunction.getFunctionName());
 
         // Grant this function permission delete files from the data bucket and
         // to read from / write to the DynamoDB table
-        coreStacks.grantGarbageCollection(handler);
+        coreStacks.grantGarbageCollection(handlerFunction);
+        coreStacks.grantReadTablesStatus(triggerFunction);
 
         // Cloudwatch rule to trigger this lambda
         Rule rule = Rule.Builder
@@ -93,9 +119,35 @@ public class GarbageCollectorStack extends NestedStack {
                 .description("A rule to periodically trigger the garbage collector")
                 .enabled(!shouldDeployPaused(this))
                 .schedule(Schedule.rate(Duration.minutes(instanceProperties.getInt(GARBAGE_COLLECTOR_PERIOD_IN_MINUTES))))
-                .targets(Collections.singletonList(new LambdaFunction(handler)))
+                .targets(List.of(new LambdaFunction(triggerFunction)))
                 .build();
         instanceProperties.set(GARBAGE_COLLECTOR_CLOUDWATCH_RULE, rule.getRuleName());
+
+        String deadLetterQueueName = Utils.truncateTo64Characters(instanceProperties.get(ID) + "-GCJobDLQ");
+        Queue deadLetterQueue = Queue.Builder
+                .create(this, "GCJobDeadLetterQueue")
+                .queueName(deadLetterQueueName)
+                .build();
+        String queueName = Utils.truncateTo64Characters(instanceProperties.get(ID) + "-GCJobQ");
+        Queue queue = Queue.Builder
+                .create(this, "GCJobQueue")
+                .queueName(queueName)
+                .deadLetterQueue(DeadLetterQueue.builder()
+                        .maxReceiveCount(1)
+                        .queue(deadLetterQueue)
+                        .build())
+                .visibilityTimeout(queueVisibilityTimeout)
+                .build();
+        instanceProperties.set(GARBAGE_COLLECTOR_QUEUE_URL, queue.getQueueUrl());
+        instanceProperties.set(GARBAGE_COLLECTOR_QUEUE_ARN, queue.getQueueArn());
+        instanceProperties.set(GARBAGE_COLLECTOR_DLQ_URL, deadLetterQueue.getQueueUrl());
+        instanceProperties.set(GARBAGE_COLLECTOR_DLQ_ARN, deadLetterQueue.getQueueArn());
+        createAlarmForDlq(this, "GarbageCollectorAlarm",
+                "Alarms if there are any messages on the dead letter queue for the garbage collector queue",
+                deadLetterQueue, topic);
+        queue.grantSendMessages(triggerFunction);
+        handlerFunction.addEventSource(new SqsEventSource(queue,
+                SqsEventSourceProps.builder().batchSize(1).build()));
 
         Utils.addStackTagIfSet(this, instanceProperties);
     }
