@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,11 +21,11 @@ import sleeper.compaction.job.CompactionJob;
 import sleeper.compaction.job.CompactionJobStatusTestData;
 import sleeper.compaction.status.store.testutils.DynamoDBCompactionJobStatusStoreTestBase;
 import sleeper.core.partition.Partition;
-import sleeper.core.statestore.FileInfoFactory;
+import sleeper.core.statestore.FileReferenceFactory;
 
 import java.time.Instant;
 import java.time.Period;
-import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -35,12 +35,12 @@ public class QueryCompactionJobStatusByPeriodIT extends DynamoDBCompactionJobSta
     public void shouldReturnCompactionJobsInPeriod() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job1 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file1", 123L, "a", "c")),
+                List.of(fileFactory.rootFile("file1", 123L)),
                 partition.getId());
         CompactionJob job2 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file2", 456L, "d", "f")),
+                List.of(fileFactory.rootFile("file2", 456L)),
                 partition.getId());
 
         // When
@@ -61,9 +61,9 @@ public class QueryCompactionJobStatusByPeriodIT extends DynamoDBCompactionJobSta
     public void shouldExcludeCompactionJobOutsidePeriod() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(123L, "a", "z")),
+                List.of(fileFactory.rootFile(123L)),
                 partition.getId());
 
         // When
@@ -79,12 +79,12 @@ public class QueryCompactionJobStatusByPeriodIT extends DynamoDBCompactionJobSta
     public void shouldExcludeCompactionJobInOtherTable() {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job1 = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file1", 123L, "a", "c")),
+                List.of(fileFactory.rootFile("file1", 123L)),
                 partition.getId());
         CompactionJob job2 = jobFactoryForOtherTable().createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile("file2", 456L, "d", "f")),
+                List.of(fileFactory.rootFile("file2", 456L)),
                 partition.getId());
 
         // When
@@ -103,9 +103,9 @@ public class QueryCompactionJobStatusByPeriodIT extends DynamoDBCompactionJobSta
     public void shouldIncludeFinishedStatusUpdateOutsidePeriod() throws Exception {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(123L, "a", "z")),
+                List.of(fileFactory.rootFile(123L)),
                 partition.getId());
 
         // When
@@ -127,9 +127,9 @@ public class QueryCompactionJobStatusByPeriodIT extends DynamoDBCompactionJobSta
     public void shouldIncludeJobCreatedOutsidePeriod() throws Exception {
         // Given
         Partition partition = singlePartition();
-        FileInfoFactory fileFactory = fileFactory(partition);
+        FileReferenceFactory fileFactory = fileFactory(partition);
         CompactionJob job = jobFactory.createCompactionJob(
-                Collections.singletonList(fileFactory.leafFile(123L, "a", "z")),
+                List.of(fileFactory.rootFile(123L)),
                 partition.getId());
 
         // When
